<resources>
    <string name="app_name">SuHtar</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="first_page">First Page</string>
    <string name="second_page">Second Page</string>
    <string name="third_page">Third Page</string>
    <string name="fourth_page">Fourth Page</string>
    <string name="home">မူလနေရာ</string>
    <string name="wallet">ပိုက်ဆံအိတ်</string>
    <string name="budget">သတ်မှတ်သုံးငွေ</string>
    <string name="profile">ကိုယ်ရေးအချက်အလက်</string>
    <string name="_0">0 ကျပ်</string>
    <string name="target_amount">သတ်မှတ်သုံးမည့်ပမာဏ</string>
    <string name="oneone">တန်ဖိုးရိုက်ထည့်ပါ</string>
    <string name="mmk">MMK</string>
    <string name="begin_time">စတင်အသုံးပြုမည့်ရက်</string>
    <string name="date">၄-၇-၂၀၁၈</string>
    <string name="usage_duration">အသုံးပြုမည့်အချိန်အပိုင်းအခြား</string>
    <string name="send_email">နေ့စဥ်အသုံးစရိတ်ပေးပို့ရန်</string>
    <string name="make_confirm">အတည်ပြုမည်</string>
    <string name="make_cancel">ပယ်ဖျက်မည်</string>
    <string name="Toolbar_Title">သတ်မှတ်သုံးေငွ</string>
    <string name="welcome">ကြိုဆိုပါတယ်</string>
    <string name="initial_value">ကနဦးပိုက်ဆံ</string>
    <string name="one_hundred_thousand">၁၀၀၀၀၀ ကျပ်</string>
    <string name="own_budget">လက်ရှိပိုက်ဆံ</string>
    <string name="floating_amount">၁၄၅၄၀၀ ကျပ်</string>
    <string name="income_category">၀င်ငွေအမျိုးအစား</string>
    <string name="expend_category">ထွက်ငွေအမျိုးအစား</string>
</resources>
