<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_wallet"
        android:enabled="true"
        android:icon="@drawable/ic_work_24dp"
        android:title="@string/wallet"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_budget"
        android:enabled="true"
        android:icon="@drawable/ic_attach_money_24dp"
        android:title="@string/budget"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>