<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_budget"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/nav_bott_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wallet"
            android:textColor="@color/textColor"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/initial_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/textColor"
        android:text="@string/initial_value"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_budget" />

    <EditText
        android:id="@+id/et_one_hundred_thousand"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/textColor"
        android:background="@drawable/edit_text_bg1"
        android:ems="10"
        android:maxLength="9"
        android:hint="@string/oneone"
        android:inputType="number"
        android:padding="2dp"
        android:textColorHint="#56ffffff"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_bg2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initial_value" />

    <TextView
        android:id="@+id/edit_text_bg2"
        android:layout_width="55dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_bg2"
        android:gravity="center"
        android:text="@string/mmk"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toStartOf="@+id/btn_wallet_save"
        app:layout_constraintTop_toBottomOf="@+id/initial_value" />

    <TextView
        android:id="@+id/own_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/own_budget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_one_hundred_thousand" />

    <TextView
        android:id="@+id/floating_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/floating_amount"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/own_budget"
        app:layout_constraintTop_toBottomOf="@+id/et_one_hundred_thousand" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/color_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/own_budget"
        app:tabIndicatorColor="@color/btn_confirm"
        app:tabSelectedTextColor="@color/btn_confirm"
        app:tabTextColor="@color/textColor">

        <!--        <android.support.design.widget.TabItem
                    android:id="@+id/income_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income_category" />

                <android.support.design.widget.TabItem
                    android:id="@+id/expend_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expend_category" />-->

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="368dp"
        android:layout_height="324dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <Button
        android:id="@+id/btn_wallet_save"
        android:layout_width="55dp"
        android:layout_height="30dp"
        android:visibility="gone"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:background="@drawable/button_confirm_bg"
        android:text="သိမ်းမည်"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initial_value" />


</android.support.constraint.ConstraintLayout>